libquantumida/g3/quantum_gate1
gates.c:763:1: error: use of undeclared identifier 'complex_float'
complex_float *t; // rbx 
^
gates.c:763:16: error: use of undeclared identifier 't'
complex_float *t; // rbx 
               ^
gates.c:887:1: error: use of undeclared identifier 't'
t = m.t; 
^
gates.c:976:7: error: use of undeclared identifier 't'
v31 = t[2].imag != 0.0 || t[2].real != 0.0; 
      ^
gates.c:976:27: error: use of undeclared identifier 't'
v31 = t[2].imag != 0.0 || t[2].real != 0.0; 
                          ^
gates.c:977:6: error: use of undeclared identifier 't'
if ( t[1].imag == 0.0 && t[1].real == 0.0 ) 
     ^
gates.c:977:26: error: use of undeclared identifier 't'
if ( t[1].imag == 0.0 && t[1].real == 0.0 ) 
                         ^
gates.c:1016:18: error: member reference base type '_Complex float' is not a structure or union
v37[-1].amplitude.real = 0.0; 
~~~~~~~~~~~~~~~~~^~~~~
gates.c:1017:18: error: member reference base type '_Complex float' is not a structure or union
v37[-1].amplitude.imag = 0.0; 
~~~~~~~~~~~~~~~~~^~~~~
gates.c:1034:28: warning: '&' within '|' [-Wbitwise-op-parentheses]
v107 = ( 1LL << v6->width) & 1 | ( ( unsigned __int64)( 1LL << v6->width) >> 1); 
       ~~~~~~~~~~~~~~~~~~~~^~~ ~
gates.c:1034:28: note: place parentheses around the '&' expression to silence this warning
v107 = ( 1LL << v6->width) & 1 | ( ( unsigned __int64)( 1LL << v6->width) >> 1); 
                           ^
       (                      )
gates.c:1073:22: error: member reference base type '_Complex float' is not a structure or union
real = v49->amplitude.real; 
       ~~~~~~~~~~~~~~^~~~~
gates.c:1074:22: error: member reference base type '_Complex float' is not a structure or union
imag = v49->amplitude.imag; 
       ~~~~~~~~~~~~~~^~~~~
gates.c:1093:22: error: member reference base type '_Complex float' is not a structure or union
real = v49->amplitude.real; 
       ~~~~~~~~~~~~~~^~~~~
gates.c:1094:22: error: member reference base type '_Complex float' is not a structure or union
imag = v49->amplitude.imag; 
       ~~~~~~~~~~~~~~^~~~~
gates.c:1108:7: error: use of undeclared identifier 't'
v60 = t[2].real; 
      ^
gates.c:1109:7: error: use of undeclared identifier 't'
v61 = t[2].imag; 
      ^
gates.c:1112:7: error: use of undeclared identifier 't'
v64 = t[3].real; 
      ^
gates.c:1113:7: error: use of undeclared identifier 't'
v65 = t[3].imag; 
      ^
gates.c:1114:15: error: member reference base type '_Complex float' is not a structure or union
v49->amplitude.real = ( float)( ( float)( real * v64) - ( float)( imag * v65)) + v62; 
~~~~~~~~~~~~~~^~~~~
gates.c:1115:15: error: member reference base type '_Complex float' is not a structure or union
v49->amplitude.imag = ( float)( ( float)( imag * v64) + ( float)( real * v65)) + v63; 
~~~~~~~~~~~~~~^~~~~
gates.c:1118:7: error: use of undeclared identifier 't'
v98 = t[1].real; 
      ^
gates.c:1120:8: error: use of undeclared identifier 't'
v100 = t[1].imag; 
       ^
gates.c:1133:16: error: member reference base type '_Complex float' is not a structure or union
v101->amplitude.real = v102; 
~~~~~~~~~~~~~~~^~~~~
gates.c:1134:16: error: member reference base type '_Complex float' is not a structure or union
v101->amplitude.imag = v103; 
~~~~~~~~~~~~~~~^~~~~
gates.c:1141:7: error: use of undeclared identifier 't'
v66 = t->imag; 
      ^
gates.c:1142:23: error: use of undeclared identifier 't'
v67 = ( float)( v58 * t->real) - ( float)( v57 * v66); 
                      ^
gates.c:1143:23: error: use of undeclared identifier 't'
v68 = ( float)( v57 * t->real) + ( float)( v58 * v66); 
                      ^
gates.c:1144:7: error: use of undeclared identifier 't'
v69 = t[1].real; 
      ^
gates.c:1145:7: error: use of undeclared identifier 't'
v70 = t[1].imag; 
      ^
gates.c:1161:7: error: use of undeclared identifier 't'
v86 = t->imag; 
      ^
gates.c:1162:17: error: use of undeclared identifier 't'
v87 = ( float)( t->real * real) - ( float)( imag * v86); 
                ^
gates.c:1163:41: error: use of undeclared identifier 't'
v88 = ( float)( real * v86) + ( float)( t->real * imag); 
                                        ^
gates.c:1164:7: error: use of undeclared identifier 't'
v89 = t[1].imag; 
      ^
gates.c:1165:17: error: use of undeclared identifier 't'
v90 = ( float)( t[1].real * v57) + ( float)( v58 * v89); 
                ^
gates.c:1166:15: error: member reference base type '_Complex float' is not a structure or union
v49->amplitude.real = ( float)( ( float)( t[1].real * v58) - ( float)( v57 * v89)) + v87; 
~~~~~~~~~~~~~~^~~~~
gates.c:1166:43: error: use of undeclared identifier 't'
v49->amplitude.real = ( float)( ( float)( t[1].real * v58) - ( float)( v57 * v89)) + v87; 
                                          ^
gates.c:1167:15: error: member reference base type '_Complex float' is not a structure or union
v49->amplitude.imag = v90 + v88; 
~~~~~~~~~~~~~~^~~~~
gates.c:1170:7: error: use of undeclared identifier 't'
v91 = t[2].real; 
      ^
gates.c:1171:7: error: use of undeclared identifier 't'
v92 = t[2].imag; 
      ^
gates.c:1174:7: error: use of undeclared identifier 't'
v95 = t[3].real; 
      ^
gates.c:1175:7: error: use of undeclared identifier 't'
v96 = t[3].imag; 
      ^
gates.c:1182:8: error: use of undeclared identifier 't'
v104 = t[2].imag; 
       ^
gates.c:1184:6: error: use of undeclared identifier 't'
if ( t[1].real == 0.0 && t[1].imag == 0.0 ) 
     ^
gates.c:1184:26: error: use of undeclared identifier 't'
if ( t[1].real == 0.0 && t[1].imag == 0.0 ) 
                         ^
gates.c:1186:8: error: use of undeclared identifier 't'
v106 = t[2].real; 
       ^
gates.c:1201:8: error: use of undeclared identifier 't'
v106 = t[2].real; 
       ^
gates.c:1224:21: error: member reference base type '_Complex float' is not a structure or union
v78 = v77->amplitude.imag; 
      ~~~~~~~~~~~~~~^~~~~
gates.c:1225:21: error: member reference base type '_Complex float' is not a structure or union
v79 = v77->amplitude.real; 
      ~~~~~~~~~~~~~~^~~~~
gates.c:1248:15: error: member reference base type '_Complex float' is not a structure or union
v82->amplitude.real = v79; 
~~~~~~~~~~~~~~^~~~~
gates.c:1249:15: error: member reference base type '_Complex float' is not a structure or union
v82->amplitude.imag = v78; 
~~~~~~~~~~~~~~^~~~~
gates.c:1341:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 warnings and 49 errors generated.
objcode.c:176:18: warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
  va_start(args, operation);
                 ^
objcode.c:165:35: note: parameter of type 'unsigned char' is declared here
quantum_objcode_put(unsigned char operation, ...)
                                  ^
1 warning generated.
